refactor(server): add overloaded method for calculating a single prr score